# LIQUIDATION

./: .env.example  .gitattributes  .gitignore  Cargo.toml  deny.toml  package-lock.json  package.json
.cargo/: audit.toml
.github/workflows/: ci.yml  heavy.yml  nightly-market-data.yml  replay-artifact.yml
config/: default.toml
crates/liq-cli/: Cargo.toml
crates/liq-cli/assets/dashboard/: index.html
crates/liq-cli/src/: dashboard.rs  main.rs  polymarket_markets.rs
crates/liq-cli/tests/fixtures/: polymarket_gamma_btc_5m.json
crates/liq-collector/: Cargo.toml
crates/liq-collector/src/: lib.rs  runtime.rs  source.rs
crates/liq-config/: Cargo.toml
crates/liq-config/src/: lib.rs
crates/liq-connectors/: Cargo.toml
crates/liq-connectors/src/: binance.rs  bitget.rs  bybit.rs  gate.rs  hyperliquid.rs  lib.rs  okx.rs  polymarket.rs
crates/liq-connectors/tests/: market_data.rs  normalization.rs
crates/liq-connectors/tests/fixtures/: binance_force_order.json  bitget_liquidation.json  bybit_all_liquidation.json  gate_contract_btc_usdt.json  gate_public_liquidates.json  hyperliquid_bbo.json  hyperliquid_bbo_nullable.json  hyperliquid_trades.json  okx_instruments_btc_usdt_swap.json  okx_liquidation_orders.json  polymarket_best_bid_ask.json  polymarket_book.json  polymarket_last_trade_price.json  (+1 more)
crates/liq-domain/: Cargo.toml
crates/liq-domain/src/: lib.rs  liquidation.rs  market.rs  source.rs
crates/liq-recorder/: Cargo.toml
crates/liq-recorder/migrations/: 202606190001_initial.sql  202606210001_collector_health_metrics.sql  202606220001_collector_health_payload_ts.sql  202606230001_market_data_events.sql  202606230002_polymarket_markets.sql
crates/liq-recorder/src/: lib.rs  migrations.rs  records.rs  repository.rs  schema.rs
crates/liq-recorder/tests/: load.rs  persistence.rs
crates/liq-replay/: Cargo.toml
crates/liq-replay/src/: lib.rs
docs/backlog/: deferred-ideas.md
docs/rag-index/: project-memory.md
docs/rag-index/decisions/: docker-isolation.md  lightrag-dev-memory.md  liquidation-source-expansion-2026-06-29.md  llm-routing.md  rust-foundation.md
docs/rag-index/summaries/: data-foundation-increment-1.md  data-foundation-paper-replay-design.md  hyperliquid-node-data.md  lightrag-dev-memory-deployment.md  liquidation-source-expansion.md  replay-strategy-parameters.md
docs/reports/aperag/: 2026-06-21-full-audit.md  eval-questions.json  implementation-audit.md
docs/reports/preflight/: 2026-06-19-infrastructure.md
docs/reports/rag/: 2026-06-19-deployment.md  2026-06-19-freedeepseek-auth.md  eval-questions.json
docs/research/: api-docs-baseline.json  bitget-gate-htx-liquidation-feeds-2026-06-29.md  exchange-liquidation-feeds.md  hyperliquid-execution-fees.md  hyperliquid-liquidation-feed-probe-2026-06-29.md  hyperliquid-node-data-probe-2026-06-29.md  index.md  liquidation-source-expansion-2026-06-29.md  polymarket-market-data-and-fees.md  rag-stack-risk-review.md  rust-data-stack.md  status.json
docs/research/plans/: last30days-exchange-liquidation-feeds-plan.json  last30days-hyperliquid-fees-execution-plan.json  last30days-polymarket-market-data-plan.json  last30days-rag-stack-risk-plan.json  last30days-rust-data-stack-plan.json
docs/research/raw/: crypto-liquidation-websocket-feed-reliability-raw-exchange-liquidation-feeds.md  hyperliquid-api-fees-funding-execution-slippage-raw-hyperliquid-fees-execution.md  lightrag-omniroute-freedeepseekapi-docker-reliability-raw-rag-stack-risk.md  polymarket-clob-api-market-data-fees-arbitrage-raw-polymarket-market-data.md  rust-websocket-parquet-timescaledb-crypto-market-data-pipeline-raw-rust-data-stack.md
docs/runbooks/: aperag-dev-memory.md  codex-network.md  dashboard.md  docker-safety.md  fee-model.md  freedeepseek-infisical-auth.md  github-auth.md  hyperliquid-node-output-probe.md  infrastructure-preflight.md  lightrag-dev-memory.md  local-development.md  omniroute-kiro-setup.md  rag-operations.md  replay-profile-comparison.md  research-before-implementation.md  source-addition.md  source-usefulness-report.md  strategy-readiness.md  subagent-audit.md
docs/superpowers/plans/: 2026-06-19-data-foundation-increment-1.md  2026-06-19-lightrag-dev-memory-deployment.md
docs/superpowers/specs/: 2026-06-19-data-foundation-paper-replay-design-ru.md  2026-06-19-data-foundation-paper-replay-design.md
infra/aperag/: .env.example  README.md  compose.yml
infra/aperag/aperag/: Dockerfile
infra/aperag/embedding/: Dockerfile  app.py
infra/aperag/free-deepseek/: Dockerfile
infra/lightrag/: .env.example  README.md  compose.yml
infra/lightrag/embedding-server/: embedding_server.py
infra/lightrag/free-deepseek/: Dockerfile
infra/timescaledb/: .env.example  compose.yml
scripts/: analyze-controlled-replay.ps1  analyze-entry-fill-diagnostics.ps1  analyze-source-signal-readiness.ps1  audit-aperag.ps1  audit-rag.ps1  benchmark-ollama-embeddings.ps1  bootstrap-freedeepseek-auth.ps1  check-api-docs-changelog.ps1  check-docker-hub.ps1  check-images.ps1  check-polymarket-metadata-freshness.ps1  check-source-addition.ps1  check-websocket-endpoint-contracts.ps1  collect-paper-replay-window.ps1  compare-pullback-profiles-aggregate.ps1  compare-pullback-profiles.ps1  compare-replay-profiles-aggregate.ps1  compare-replay-profiles.ps1  controlled-replay.ps1  create-freedeepseek-auth.ps1  diagnose-cpu.ps1  fetch-gate-contract.ps1  fetch-okx-instruments.ps1  fetch-polymarket-markets.ps1  gh-project.ps1  guard-compose.ps1  liq-aperag.ps1  liq-rag.ps1  market-data-report-history.ps1  preflight-auth.ps1  preflight-hyperliquid-node-runner.ps1  preflight.ps1  probe-hyperliquid-node-data.ps1  probe-hyperliquid-node-output.ps1  publish-freedeepseek-auth-to-infisical.ps1  run-entry-fill-diagnostics-batch.ps1  run-latest-polymarket-replay.ps1  run-market-data-nightly-check.ps1  run-signal-pullback-pipeline.ps1  run-until-signal-built-aggregate.ps1  (+25 more)
tests/: dashboard-smoke.spec.mjs
tests/fixtures/dashboard/: collector-status-edge-cases.json  latest-polymarket-baseline.json  latest-polymarket-market.json
(+1 files in other folders)
