[workspace]
resolver = "3"
members = [
    "crates/liq-cli",
    "crates/liq-config",
    "crates/liq-collector",
    "crates/liq-connectors",
    "crates/liq-domain",
    "crates/liq-recorder",
    "crates/liq-replay",
]

[workspace.package]
edition = "2024"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/Cryptotehnolog/LIQUIDATION"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", default-features = false, features = ["http1", "json", "query", "tokio"] }
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
rust_decimal = { version = "1", features = ["serde-with-str"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "macros", "migrate", "time", "uuid", "rust_decimal", "json"] }
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde", "serde-well-known"] }
tokio = { version = "1", features = ["net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["serde", "v5"] }

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
correctness = "deny"
suspicious = "warn"
complexity = "warn"
perf = "warn"
style = "warn"
pedantic = "warn"
