[package]
name = "liq-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
liq-recorder = { path = "../liq-recorder" }
liq-replay = { path = "../liq-replay" }
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[[bin]]
name = "liq"
path = "src/main.rs"

[lints]
workspace = true
