[package]
name = "liq-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
liq-collector = { path = "../liq-collector", version = "0.1.0" }
liq-connectors = { path = "../liq-connectors", version = "0.1.0" }
liq-recorder = { path = "../liq-recorder", version = "0.1.0" }
liq-replay = { path = "../liq-replay", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[[bin]]
name = "liq"
path = "src/main.rs"

[lints]
workspace = true
