[package]
name = "liq-collector"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
futures-util.workspace = true
liq-connectors = { path = "../liq-connectors", version = "0.1.0" }
liq-domain = { path = "../liq-domain", version = "0.1.0" }
liq-recorder = { path = "../liq-recorder", version = "0.1.0" }
rustls.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true

[dev-dependencies]
rust_decimal.workspace = true
uuid.workspace = true

[lints]
workspace = true
