[package]
name = "liq-replay"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
liq-domain = { path = "../liq-domain", version = "0.1.0" }
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
time.workspace = true
uuid.workspace = true

[lints]
workspace = true
